# rust-lambda-sqs-test

./: Cargo.toml  Dockerfile  entrypoint.sh  test.sh
src/: main.rs
