[package]
name = "test-lambda-sqs-cf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.28.1", features=["macros", "rt-multi-thread"]}
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
lambda_runtime = "0.8.0"
aws_lambda_events = "0.9.0"
